use cluster name and region name as env vars

--- a/.github/workflows/iac_workflow.yaml
+++ b/.github/workflows/iac_workflow.yaml
@@ -18,8 +18,8 @@ env:
  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
  # S3 bucket for the Terraform state
  BUCKET_TF_STATE: ${{ secrets.S3_BUCKET_NAME}}
- AWS_REGION: eu-north-1
- EKS_CLUSTER: test_cluster
+ AWS_REGION: ${{ secrets.AWS_REGION }}
+ EKS_CLUSTER_NAME: ${{ secrets.EKS_CLUSTER_NAME }}
 
 jobs:
    terraform:
@@ -51,7 +51,7 @@ jobs:
 
        - name: Terraform plan
          id: plan
-         run: terraform plan -no-color -input=false -out planfile
+         run: terraform plan -var "aws_region=${{ env.AWS_REGION }}" -var "eks_cluster_name=${{ env.EKS_CLUSTER_NAME }}" -no-color -input=false -out planfile
          continue-on-error: true
 
        - name: Terraform plan status
@@ -61,7 +61,7 @@ jobs:
        - name: Terraform Apply
          id: apple
          if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-         run: terraform apply -auto-approve -input=false -parallelism=1 planfile
+         run: terraform apply -var "aws_region=${{ env.AWS_REGION }}" -var "eks_cluster_name=${{ secrets.EKS_CLUSTER_NAME }}" -auto-approve -input=false -parallelism=1 planfile
 
        - name: Configure AWS credentials
          uses: aws-actions/configure-aws-credentials@v1
@@ -73,7 +73,7 @@ jobs:
        - name: Get Kube config file
          id: getconfig
          if: steps.apple.outcome == 'success'
-         run: aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER }} 
+         run: aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER_NAME }} 
 
        - name: Install Ingress controller
          if: steps.apple.outcome == 'success' && steps.getconfig.outcome == 'success'
