--- a/.github/workflows/iac_workflow.yaml
+++ b/.github/workflows/iac_workflow.yaml
@@ -51,7 +51,7 @@ jobs:
 
        - name: Terraform plan
          id: plan
-         run: terraform plan -var "aws_region=${{ env.AWS_REGION }}" -var "eks_cluster_name=${{ env.EKS_CLUSTER_NAME }}" -no-color -input=false -out planfile
+         run: terraform plan -var "region=${{ env.AWS_REGION }}" -var "cluster_name=${{ env.EKS_CLUSTER_NAME }}" -no-color -input=false -out planfile
          continue-on-error: true
 
        - name: Terraform plan status
@@ -61,13 +61,13 @@ jobs:
        - name: Terraform Apply
          id: apple
          if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-         run: terraform apply -var "aws_region=${{ env.AWS_REGION }}" -var "eks_cluster_name=${{ secrets.EKS_CLUSTER_NAME }}" -auto-approve -input=false -parallelism=1 planfile
+         run: terraform apply -var "region=${{ env.AWS_REGION }}" -var "cluster_name=${{ env.EKS_CLUSTER_NAME }}" -auto-approve -input=false -parallelism=1 planfile
 
        - name: Configure AWS credentials
          uses: aws-actions/configure-aws-credentials@v1
          with:
-           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+           aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
+           aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
            aws-region: ${{ env.AWS_REGION }}
      
        - name: Get Kube config file
